@@ -11,20 +11,16 @@ import br.edu.ufape.plataforma.mentoria.model.User;
 import br.edu.ufape.plataforma.mentoria.repository.MentorRepository;
 import br.edu.ufape.plataforma.mentoria.repository.MentoredRepository;
 import br.edu.ufape.plataforma.mentoria.repository.SessionRepository;
-import br.edu.ufape.plataforma.mentoria.repository.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-
-
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
 import java.util.Optional;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -58,7 +54,7 @@ class SessionServiceTest {
         mentored = new Mentored("Joestar", "12345678900",
                 LocalDate.of(2000, 1, 1),
                 Course.ADMINISTRACAO, user,
-                "Estudante de Administração", InterestArea.CIBERSEGURANCA);
+                "Estudante de Administração", List.of(InterestArea.CIBERSEGURANCA));
         mentored.setId(1L);
 
         User guest = new User("guest@gmail.com", "Joestar@123", UserRole.MENTOR);
@@ -99,6 +95,32 @@ class SessionServiceTest {
         assertEquals(session.getMeetingTopic(), createdSession.getMeetingTopic());
     }
 
+    @Test
+    void createSession_SameMentorAndMentored_ShouldThrow() {
+        mentored.setId(1L);
+        mentor.setId(1L);
+        sessionDTO.setMentorId(1L);
+        sessionDTO.setMentoredId(1L);
+
+        when(mentorRepository.findById(1L)).thenReturn(Optional.of(mentor));
+        when(mentoredRepository.findById(1L)).thenReturn(Optional.of(mentored));
+
+        assertThrows(IllegalArgumentException.class, () -> sessionService.createSession(sessionDTO));
+    }
+
+    @Test
+    void createSession_MentorNotFound_ShouldThrow() {
+        when(mentorRepository.findById(sessionDTO.getMentorId())).thenReturn(Optional.empty());
+        assertThrows(EntityNotFoundException.class, () -> sessionService.createSession(sessionDTO));
+    }
+
+    @Test
+    void createSession_MentoredNotFound_ShouldThrow() {
+        when(mentorRepository.findById(sessionDTO.getMentorId())).thenReturn(Optional.of(mentor));
+        when(mentoredRepository.findById(sessionDTO.getMentoredID())).thenReturn(Optional.empty());
+
+        assertThrows(EntityNotFoundException.class, () -> sessionService.createSession(sessionDTO));
+    }
 
     @Test
     void getSessionById() {
@@ -155,7 +177,20 @@ class SessionServiceTest {
         assertNotNull(sessionHistory);
         assertFalse(sessionHistory.isEmpty());
         assertEquals(1, sessionHistory.size());
-        assertEquals(sessionDTO, sessionHistory.get(0));
+        assertEquals(sessionDTO, sessionHistory.getFirst());
+    }
+
+    @Test
+    void findSessionHistoryBetweenUsers_MentoredNotFound_ShouldThrow() {
+        when(mentorRepository.findById(sessionDTO.getMentorId())).thenReturn(Optional.of(mentor));
+        when(mentoredRepository.findById(sessionDTO.getMentoredID())).thenReturn(Optional.empty());
+        assertThrows(EntityNotFoundException.class, () -> sessionService.findSessionHistoryBetweenUsers(mentor.getId(), mentored.getId()));
+    }
+
+    @Test
+    void findSessionHistoryBetweenUsers_MentorNotFound_ShouldThrow() {
+        when(mentorRepository.findById(sessionDTO.getMentorId())).thenReturn(Optional.empty());
+        assertThrows(EntityNotFoundException.class, () -> sessionService.findSessionHistoryBetweenUsers(mentor.getId(), mentored.getId()));
     }
 
     @Test
@@ -173,10 +208,16 @@ class SessionServiceTest {
         assertNotNull(sessionHistoryUser);
         assertFalse(sessionHistoryUser.isEmpty());
         assertEquals(1, sessionHistoryUser.size());
-        assertEquals(sessionDTO, sessionHistoryUser.get(0));
+        assertEquals(sessionDTO, sessionHistoryUser.getFirst());
     }
 
-   @Test
+    @Test
+    void findSessionHistoryMentor_MentorNotFound_ShouldThrow() {
+        when(mentorRepository.findById(sessionDTO.getMentorId())).thenReturn(Optional.empty());
+        assertThrows(EntityNotFoundException.class, () -> sessionService.findSessionHistoryMentor(mentor.getId()));
+    }
+
+    @Test
     void findSessionHistoryMentored() {
        when(mentoredRepository.findById(mentored.getId())).thenReturn(Optional.of(mentored));
 
@@ -191,7 +232,132 @@ class SessionServiceTest {
        assertNotNull(sessionHistoryUser);
         assertFalse(sessionHistoryUser.isEmpty());
         assertEquals(1, sessionHistoryUser.size());
-        assertEquals(sessionDTO, sessionHistoryUser.get(0));
+        assertEquals(sessionDTO, sessionHistoryUser.getFirst());
     }
 
+    @Test
+    void findSessionHistoryMentored_MentoredNotFound_ShouldThrow() {
+        when(mentoredRepository.findById(sessionDTO.getMentoredID())).thenReturn(Optional.empty());
+        assertThrows(EntityNotFoundException.class, () -> sessionService.findSessionHistoryMentored(mentored.getId()));
+    }
+
+    @Test
+    void updateSession() {
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+        when(sessionRepository.save(any(Session.class))).thenReturn(session);
+        when(sessionMapper.toDTO(any())).thenAnswer(inv -> {
+            SessionDTO dto = new SessionDTO();
+            dto.setDate(session.getDate());
+            dto.setTime(session.getTime());
+            dto.setMeetingTopic(session.getMeetingTopic());
+            dto.setLocation("Casa nova");
+            dto.setStatus(Status.CANCELLED); // Corrija para o status esperado
+            return dto;
+        });
+
+        SessionDTO updated = sessionService.updateSession(session.getId(), sessionDTO);
+
+        assertNotNull(updated);
+        assertEquals(Status.CANCELLED, updated.getStatus());
+    }
+
+    @Test
+    void getSessionDTOById() {
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+        when(sessionMapper.toDTO(session)).thenReturn(sessionDTO);
+
+        SessionDTO result = sessionService.getSessionDTOById(session.getId());
+        assertNotNull(result);
+        assertEquals(session.getStatus(), result.getStatus());
+    }
+
+    @Test
+    void updateSessionStatus_PendingToAccepted() {
+        session.setStatus(Status.PENDING);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+        when(sessionRepository.save(any(Session.class))).thenReturn(session);
+        when(sessionMapper.toDTO(any(Session.class))).thenReturn(sessionDTO);
+
+        SessionDTO result = sessionService.updateSessionStatus(session.getId(), Status.ACCEPTED);
+
+        assertNotNull(result);
+        verify(sessionRepository).save(session);
+    }
+
+    @Test
+    void updateSessionStatus_AcceptedToCompleted() {
+        session.setStatus(Status.ACCEPTED);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+        when(sessionRepository.save(any(Session.class))).thenReturn(session);
+        when(sessionMapper.toDTO(any(Session.class))).thenReturn(sessionDTO);
+
+        SessionDTO result = sessionService.updateSessionStatus(session.getId(), Status.COMPLETED);
+
+        assertNotNull(result);
+        verify(sessionRepository).save(session);
+    }
+
+    @Test
+    void updateSessionStatus_InvalidTransition_ShouldThrow() {
+        session.setStatus(Status.PENDING);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                sessionService.updateSessionStatus(session.getId(), Status.COMPLETED)
+        );
+    }
+
+    @Test
+    void updateSessionStatus_AceptedState_ShouldThrow() {
+        session.setStatus(Status.ACCEPTED);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                sessionService.updateSessionStatus(session.getId(), Status.ACCEPTED)
+        );
+    }
+
+    @Test
+    void updateSessionStatus_FinalState_ShouldThrow() {
+        session.setStatus(Status.CANCELLED);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                sessionService.updateSessionStatus(session.getId(), Status.ACCEPTED)
+        );
+    }
+
+    @Test
+    void updateSessionStatus_PendingToInvalid_ShouldThrow() {
+        session.setStatus(Status.PENDING);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                sessionService.updateSessionStatus(session.getId(), Status.COMPLETED)
+        );
+    }
+
+    @Test
+    void updateSessionStatus_AcceptedToInvalid_ShouldThrow() {
+        session.setStatus(Status.ACCEPTED);
+        when(sessionRepository.findById(session.getId())).thenReturn(Optional.of(session));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                sessionService.updateSessionStatus(session.getId(), Status.REJECTED)
+        );
+    }
+    @Test
+    void findAll() {
+        Session session2 = new Session(mentor, mentored,
+                LocalDate.of(2023, 11, 1),
+                LocalTime.of(15, 0),
+                "Nova sessão",
+                "Google Meet");
+
+        when(sessionRepository.findAll()).thenReturn(List.of(session, session2));
+
+        List<SessionDTO> result = sessionService.findAll();
+        assertNotNull(result);
+        assertEquals(2, result.size());
+    }
 }
